--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Amazone</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -16,7 +16,7 @@
   <body>
     <header>
       <!-- navbar -->
-      <div class="navbar">
+      <div class="navbar" id="nav">
         <!-- box-1 -->
         <div class="nav-logo border">
           <div class="logo"></div>
@@ -99,7 +99,7 @@
 
     <!-- shop-section -->
     <div class="shop-section">
-      <div class=" box">
+      <div class="box">
         <div class="box-content">
           <h2>Clothes</h2>
           <div
@@ -110,7 +110,7 @@
         </div>
       </div>
 
-      <div class=" box">
+      <div class="box">
         <div class="box-content">
           <h2>Health & Personal Care</h2>
           <div
@@ -121,7 +121,7 @@
         </div>
       </div>
 
-      <div class=" box">
+      <div class="box">
         <div class="box-content">
           <h2>Furniture</h2>
           <div
@@ -132,7 +132,7 @@
         </div>
       </div>
 
-      <div class=" box">
+      <div class="box">
         <div class="box-content">
           <h2>Electronics</h2>
           <div
@@ -143,7 +143,7 @@
         </div>
       </div>
 
-      <div class=" box">
+      <div class="box">
         <div class="box-content">
           <h2>Beauty Picks</h2>
           <div
@@ -154,7 +154,7 @@
         </div>
       </div>
 
-      <div class=" box">
+      <div class="box">
         <div class="box-content">
           <h2>Pet Care</h2>
           <div
@@ -165,7 +165,7 @@
         </div>
       </div>
 
-      <div class=" box">
+      <div class="box">
         <div class="box-content">
           <h2>New Arrival in Toys</h2>
           <div
@@ -176,7 +176,7 @@
         </div>
       </div>
 
-      <div class=" box">
+      <div class="box">
         <div class="box-content">
           <h2>Discover Fashion Trends</h2>
           <div
@@ -189,8 +189,64 @@
     </div>
 
     <footer>
+      <!-- panel1 -->
       <div class="foot-panel1">
-        Back to Top
+        <a href="#nav">Back to Top</a>
+      </div>
+
+      <!-- panel2 -->
+      <div class="foot-panel2">
+        <ul>
+          <p>Get to Know Us</p>
+          <a href="">About Us</a>
+          <a href="">Careers</a>
+          <a href="">Press Releases</a>
+          <a href="">Amazon Science</a>
+        </ul>
+        <ul>
+          <p>Connect with Us</p>
+          <a href="">Facebook</a>
+          <a href="">Twitter</a>
+          <a href="">Instagram</a>
+        </ul>
+        <ul>
+          <p>Make Money with Us</p>
+          <a href="">Sell on Amazon</a>
+          <a href="">Sell under Amazon Accelerator</a>
+          <a href="">Protect and Build Your Brand</a>
+          <a href="">Amazon Global Selling</a>
+          <a href="">Become an Affiliate</a>
+          <a href="">Fulfilment by Amazon</a>
+          <a href="">Advertise Your Products</a>
+          <a href="">Amazon Pay on Merchants</a>
+        </ul>
+        <ul>
+          <p>Let Us Help You</p>
+          <a href="">COVID-19 and Amazon</a>
+          <a href="">Your Account</a>
+          <a href="">Returns Centre</a>
+          <a href="">100% Purchase Protection</a>
+          <a href="">Amazon App Download</a>
+          <a href="">Help</a>
+        </ul>
+      </div>
+
+      <!-- panel3 -->
+      <div class="foot-panel3">
+        <div class="logo"></div>
+      </div>
+
+      <!-- panel 4 -->
+      <div class="foot-panel4">
+        <div class="pages">
+          <a href="">Conditons of Use</a>
+          <a href="">Privacy Notice</a>
+          <a href="">Interest-Based Ads</a>
+        </div>
+
+        <div class="copyright">
+          © 1996-2023, Amazon.com, Inc. or its affiliates
+        </div>
       </div>
     </footer>
   </body>
