--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       <div class="hero-msg">
         <p>
           You are on amazon.com. You can also shop on Amazon India for millions
-          of product with fast delivery.<a href="#">
+          of product with fast delivery.<a href="https://www.amazon.in/">
             Click here to go to amazon.in</a
           >
         </p>
